# sd_demo_back

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  readme.md
app/: main.py  models.py  utils.py
app/core/: security.py
app/routers/: db_query.py  ext_chat.py  ext_secret.py  fake_data.py  items.py  users.py
